--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -149,12 +149,12 @@ and
 \end{figure}
 
 These models are kinematically distinct from one another, as shown in the comparison of the 
-MET spectra in Fig.~\ref{fig:METSimpMonoHiggs} for high and low mediator masses. 
+MET spectra in Fig.~\ref{fig:METSimpMonoHiggs} for high and low masses of the pseudoscalar mediator. 
 Figure~\ref{fig:METSimpMonoHiggs} (a) shows the MET distribution 
 for models with high mediator masses ($m_{S} = 1$ TeV, $m_{Z^\prime} = 1$ TeV, $m_{A^0} = 1$ TeV)
 and DM mass of either 50 ($Z_B'$ and $A^0$ models) or 65 GeV (scalar mediator model).
 Figure~\ref{fig:METSimpMonoHiggs} (b)  shows the MET distribution 
-for models with low mediator masses ($m_{Z_B'} = 100$ GeV, $m_{Z^\prime} = 1$ TeV, $m_{A^0} = 100$ GeV)
+for models with low pseudoscalar mediator masses ($m_{Z_B'} = 100$ GeV, $m_{Z^\prime} = 1$ TeV, $m_{A^0} = 100$ GeV)
 and DM mass of 1 TeV for all models. 
 	
 
