fix todo font size in margins
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@186 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -62,7 +62,10 @@
   \usepackage[protrusion=true,expansion=true,tracking=true,kerning=true,spacing=true]{microtype}
 }{}
 \fvset{fontsize=\normalsize} % default font size for fancy-verbatim environments
+
 \usepackage[marginpar]{todo} % for todo list
+\let\nominalTodo\Todo
+\renewcommand\Todo[1]{\nominalTodo{\normalfont\footnotesize\sffamily\bf #1}}
 
 % Prints an asterisk that takes up no horizontal space.
 % Useful in tabular environments.
